# longblack

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.claude/commands/: ask-articles.md  save-article.md  search-articles.md
src/: __init__.py  embeddings.py  models.py  scraper.py  server.py  storage.py
