[project]
name = "longblack"
version = "0.1.0"
description = "Article RAG Plugin - MCP server for scraping and searching articles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.1.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=2.2.0",
    "trafilatura>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "pymupdf>=1.23.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
longblack = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
